--- a/index.html
+++ b/index.html
@@ -4,14 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sorting Item App</title>
+  <title>React Item Sorting App</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
+  <h1>React Sorting App</h1>
   <div id="root"></div>
+  <h3>Data Model (mixed)</h3>
+  <div>
+    <pre>
+        [
+          {category: "Sporting Goods", price: "$49.99", stocked: true, name: "Football"},
+          {category: "Sporting Goods", price: "$29.99", stocked: false, name: "Basketball"},
+          {category: "Electronics", price: "$199.99", stocked: true, name: "Nexus 7"},
+          {category: "Electronics", price: "$99.99", stocked: true, name: "iPod Touch"},
+          {category: "Sporting Goods", price: "$9.99", stocked: true, name: "Baseball"},
+          {category: "Electronics", price: "$399.99", stocked: false, name: "iPhone 5"},
+          {category: "Food", price: "$1.99", stocked: true, name: "Cherry"},
+          {category: "Stationary", price: "$10.99", stocked: false, name: "Mechenical Pencil"},
+          {category: "Food", price: "$3.99", stocked: false, name: "Milk"},
+          {category: "Stationary", price: "$4.99", stocked: true, name: "Eraser Set"},
+          {category: "Stationary", price: "$1.99", stocked: true, name: "Glue"},
+          {category: "Food", price: "$0.99", stocked: true, name: "Banana"},
+        ]
+    </pre>
+  </div>
+  <a href="https://reactjs.org/docs/thinking-in-react.html" target="_blank"><button>Original Version with Unmixed Data Model</button></a>
   <script type="text/babel" src="index.js"></script>
 </body>
 </html>
